--- a/WebContent/graph/btc_volume.html
+++ b/WebContent/graph/btc_volume.html
@@ -9,70 +9,8 @@
 <script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
 
-<pre id="csv" style="display:none">
-DAY,BITHUMB
-2017-07-01 00:00:00,300
-2017-07-01 04:00:00,880
-2017-07-01 08:00:00,920
-2017-07-01 12:00:00,2260
-2017-07-01 16:00:00,960
-2017-07-01 20:00:00,740
-2017-07-02 00:00:00,1820
-2017-07-02 04:00:00,500
-2017-07-02 08:00:00,1160
-2017-07-02 12:00:00,2320
-2017-07-02 16:00:00,960
-2017-07-02 20:00:00,740
-2017-07-03 00:00:00,1820
-2017-07-03 04:00:00,500
-2017-07-03 08:00:00,1160
-2017-07-03 12:00:00,2320
-2017-07-03 16:00:00,1700
-2017-07-03 20:00:00,1100
-2017-07-04 00:00:00,2380
-2017-07-04 04:00:00,160
-2017-07-04 08:00:00,960
-2017-07-04 12:00:00,5460
-2017-07-04 16:00:00,2380
-2017-07-04 20:00:00,860
-2017-07-05 00:00:00,1820
-2017-07-05 04:00:00,80
-2017-07-05 08:00:00,620
-2017-07-05 12:00:00,1800
-2017-07-05 16:00:00,2480
-2017-07-05 20:00:00,1140
-2017-07-06 00:00:00,1240
-2017-07-06 04:00:00,660
-2017-07-06 08:00:00,940
-2017-07-06 12:00:00,1520
-2017-07-06 16:00:00,3060
-2017-07-06 20:00:00,2400
-2017-07-07 00:00:00,1020
-2017-07-07 04:00:00,220
-2017-07-07 08:00:00,420
-2017-07-07 12:00:00,2240
-2017-07-07 16:00:00,1120
-2017-07-07 20:00:00,1500
-
-
-
-
-</pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
-
-<!--
-function handleFiles() {
-
-    $(document).ready(function () {
-        $.ajax({
-            type: "GET",
-            url: "D:\Docs\Desktop\csvfile.csv",
-            dataType: "csv",
-            success: function (data) { processData(data); }
-        });
-    });
-}
--->
 
 Highcharts.setOptions({
     lang: {
@@ -80,7 +18,7 @@ Highcharts.setOptions({
     }
 });
 
-$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
+$.get('./file/BTC_volume.csv', function(data) {
  Highcharts.chart('container', {
 	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
 	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
@@ -99,7 +37,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
 	   },
 
      data: {
-         csv: document.getElementById('csv').innerHTML
+         csv : data
      },
 
      title: {
