--- a/WebContent/graph/etc_volume.html
+++ b/WebContent/graph/etc_volume.html
@@ -9,70 +9,8 @@
 <script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
 
-<pre id="csv" style="display:none">
-DAY,BITHUMB
-2017-07-01 00:00:00,116280
-2017-07-01 04:00:00,100
-2017-07-01 08:00:00,103240
-2017-07-01 12:00:00,131940
-2017-07-01 16:00:00,47940
-2017-07-01 20:00:00,18540
-2017-07-02 00:00:00,101860
-2017-07-02 04:00:00,48600
-2017-07-02 08:00:00,46040
-2017-07-02 12:00:00,65720
-2017-07-02 16:00:00,24200
-2017-07-02 20:00:00,16420
-2017-07-03 00:00:00,23200
-2017-07-03 04:00:00,52400
-2017-07-03 08:00:00,110440
-2017-07-03 12:00:00,45340
-2017-07-03 16:00:00,79060
-2017-07-03 20:00:00,93040
-2017-07-04 00:00:00,333440
-2017-07-04 04:00:00,16120
-2017-07-04 08:00:00,78040
-2017-07-04 12:00:00,288520
-2017-07-04 16:00:00,779080
-2017-07-04 20:00:00,59500
-2017-07-05 00:00:00,53180
-2017-07-05 04:00:00,17360
-2017-07-05 08:00:00,23200
-2017-07-05 12:00:00,65220
-2017-07-05 16:00:00,36300
-2017-07-05 20:00:00,171460
-2017-07-06 00:00:00,49620
-2017-07-06 04:00:00,35180
-2017-07-06 08:00:00,64260
-2017-07-06 12:00:00,69300
-2017-07-06 16:00:00,2845660
-2017-07-06 20:00:00,199300
-2017-07-07 00:00:00,60480
-2017-07-07 04:00:00,9320
-2017-07-07 08:00:00,4180
-2017-07-07 12:00:00,135360
-2017-07-07 16:00:00,199520
-2017-07-07 20:00:00,58580
-
-
-
-
-</pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
-
-<!--
-function handleFiles() {
-
-    $(document).ready(function () {
-        $.ajax({
-            type: "GET",
-            url: "D:\Docs\Desktop\csvfile.csv",
-            dataType: "csv",
-            success: function (data) { processData(data); }
-        });
-    });
-}
--->
 
 Highcharts.setOptions({
     lang: {
@@ -80,7 +18,7 @@ Highcharts.setOptions({
     }
 });
 
-$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
+$.get('./file/ETC_volume.csv', function(data) {
  Highcharts.chart('container', {
 	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
 	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
@@ -99,7 +37,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
 	   },
 
      data: {
-         csv: document.getElementById('csv').innerHTML
+         csv : data
      },
 
      title: {
@@ -151,10 +89,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
          labels: {
              format: '{value:.,0f}',
              style: {
-                 color: '#FFFFFF',
-                 style: {
-                     color: '#FFFFFF'
-                  }
+                 color: '#FFFFFF'
               }
          },
          showFirstLabel: false
@@ -227,16 +162,16 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
           }
        },
        legend: {
- 	      itemStyle: {
- 	         color: '#FFFFFF'
- 	      },
- 	      itemHoverStyle: {
- 	         color: '#FFFFFF'
- 	      },
- 	      itemHiddenStyle: {
- 	         color: '#FFFFFF'
- 	      }
- 	   },
+    	      itemStyle: {
+    	         color: '#FFFFFF'
+    	      },
+    	      itemHoverStyle: {
+    	         color: '#FFFFFF'
+    	      },
+    	      itemHiddenStyle: {
+    	         color: '#FFFFFF'
+    	      }
+    	   },
      series: [{
          name: 'Bithumb',
          lineWidth: 4,
