--- a/WebContent/graph/eth_volume.html
+++ b/WebContent/graph/eth_volume.html
@@ -8,70 +8,9 @@
 <script src="https://www.highcharts.com/media/com_demo/js/highslide-full.min.js"></script>
 <script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
-<pre id="csv" style="display:none">
-DAY,BITHUMB
-2017-07-01 00:00:00,73720
-2017-07-01 04:00:00,5760
-2017-07-01 08:00:00,84100
-2017-07-01 12:00:00,174300
-2017-07-01 16:00:00,121020
-2017-07-01 20:00:00,51960
-2017-07-02 00:00:00,43040
-2017-07-02 04:00:00,65020
-2017-07-02 08:00:00,53760
-2017-07-02 12:00:00,114380
-2017-07-02 16:00:00,83000
-2017-07-02 20:00:00,46760
-2017-07-03 00:00:00,25400
-2017-07-03 04:00:00,47040
-2017-07-03 08:00:00,107320
-2017-07-03 12:00:00,73500
-2017-07-03 16:00:00,34860
-2017-07-03 20:00:00,28340
-2017-07-04 00:00:00,65120
-2017-07-04 04:00:00,4900
-2017-07-04 08:00:00,22020
-2017-07-04 12:00:00,60620
-2017-07-04 16:00:00,14060
-2017-07-04 20:00:00,8960
-2017-07-05 00:00:00,44520
-2017-07-05 04:00:00,3480
-2017-07-05 08:00:00,27640
-2017-07-05 12:00:00,32480
-2017-07-05 16:00:00,18780
-2017-07-05 20:00:00,89140
-2017-07-06 00:00:00,54440
-2017-07-06 04:00:00,87860
-2017-07-06 08:00:00,35820
-2017-07-06 12:00:00,12100
-2017-07-06 16:00:00,196420
-2017-07-06 20:00:00,69980
-2017-07-07 00:00:00,12700
-2017-07-07 04:00:00,7420
-2017-07-07 08:00:00,17200
-2017-07-07 12:00:00,38660
-2017-07-07 16:00:00,85060
-2017-07-07 20:00:00,17220
 
-
-
-
-</pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
-
-<!--
-function handleFiles() {
-
-    $(document).ready(function () {
-        $.ajax({
-            type: "GET",
-            url: "D:\Docs\Desktop\csvfile.csv",
-            dataType: "csv",
-            success: function (data) { processData(data); }
-        });
-    });
-}
--->
 
 Highcharts.setOptions({
     lang: {
@@ -79,7 +18,7 @@ Highcharts.setOptions({
     }
 });
 
-$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
+$.get('./file/ETH_volume.csv', function(data) {
  Highcharts.chart('container', {
 	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
 	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
@@ -98,7 +37,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
 	   },
 
      data: {
-         csv: document.getElementById('csv').innerHTML
+         csv : data
      },
 
      title: {
@@ -223,16 +162,16 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
           }
        },
        legend: {
- 	      itemStyle: {
- 	         color: '#FFFFFF'
- 	      },
- 	      itemHoverStyle: {
- 	         color: '#FFFFFF'
- 	      },
- 	      itemHiddenStyle: {
- 	         color: '#FFFFFF'
- 	      }
- 	   },
+    	      itemStyle: {
+    	         color: '#FFFFFF'
+    	      },
+    	      itemHoverStyle: {
+    	         color: '#FFFFFF'
+    	      },
+    	      itemHiddenStyle: {
+    	         color: '#FFFFFF'
+    	      }
+    	   },
      series: [{
          name: 'Bithumb',
          lineWidth: 4,
