--- a/WebContent/graph/xrp_price.html
+++ b/WebContent/graph/xrp_price.html
@@ -9,68 +9,8 @@
 <script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
 
-<pre id="csv" style="display:none">
-DAY,BITHUMB,POLONEIX
-2017-07-01 00:00:00,314,283
-2017-07-01 04:00:00,315,274
-2017-07-01 08:00:00,314,269
-2017-07-01 12:00:00,310,272
-2017-07-01 16:00:00,308,270
-2017-07-01 20:00:00,308,267
-2017-07-02 00:00:00,304,258
-2017-07-02 04:00:00,305,260
-2017-07-02 08:00:00,304,259
-2017-07-02 12:00:00,302,263
-2017-07-02 16:00:00,301,267
-2017-07-02 20:00:00,301,265
-2017-07-03 00:00:00,301,272
-2017-07-03 04:00:00,302,276
-2017-07-03 08:00:00,304,273
-2017-07-03 12:00:00,302,274
-2017-07-03 16:00:00,303,274
-2017-07-03 20:00:00,302,284
-2017-07-04 00:00:00,306,282
-2017-07-04 04:00:00,306,283
-2017-07-04 08:00:00,308,287
-2017-07-04 12:00:00,306,286
-2017-07-04 16:00:00,306,287
-2017-07-04 20:00:00,306,278
-2017-07-05 00:00:00,305,276
-2017-07-05 04:00:00,304,277
-2017-07-05 08:00:00,302,279
-2017-07-05 12:00:00,302,274
-2017-07-05 16:00:00,305,275
-2017-07-05 20:00:00,301,276
-2017-07-06 00:00:00,300,280
-2017-07-06 04:00:00,300,279
-2017-07-06 08:00:00,301,280
-2017-07-06 12:00:00,300,278
-2017-07-06 16:00:00,300,278
-2017-07-06 20:00:00,301,278
-2017-07-07 00:00:00,300,277
-2017-07-07 04:00:00,301,279
-2017-07-07 08:00:00,301,276
-2017-07-07 12:00:00,301,267
-2017-07-07 16:00:00,298,263
-2017-07-07 20:00:00,295,258
-
-
-</pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
-
-<!--
-function handleFiles() {
-
-    $(document).ready(function () {
-        $.ajax({
-            type: "GET",
-            url: "D:\Docs\Desktop\csvfile.csv",
-            dataType: "csv",
-            success: function (data) { processData(data); }
-        });
-    });
-}
--->
 
 Highcharts.setOptions({
     lang: {
@@ -78,7 +18,7 @@ Highcharts.setOptions({
     }
 });
 
-$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
+$.get('./file/XRP_price.csv', function(data) {
  Highcharts.chart('container', {
 	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
 	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
@@ -96,9 +36,9 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
 	      plotBorderColor: '#242943'
 	   },
 
-     data: {
-         csv: document.getElementById('csv').innerHTML
-     },
+	   data: {
+	         csv : data
+	     },
 
      title: {
          text: '시세 정보',
@@ -168,7 +108,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
          },
          showFirstLabel: false
      }],
-
+     
      legend: {
          align: 'left',
          verticalAlign: 'top',
