--- a/WebContent/graph/btc_price.html
+++ b/WebContent/graph/btc_price.html
@@ -17,8 +17,8 @@ Highcharts.setOptions({
         thousandsSep: ','
     }
 });
-var s = './file/BTC_price.csv'; 
-$.get(s, function(data) {
+ 
+$.get('./file/BTC_price.csv', function(data) {
  Highcharts.chart('container', {
 	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
 	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
