--- a/WebContent/historyData/historydata.html
+++ b/WebContent/historyData/historydata.html
@@ -76,14 +76,12 @@
 	        method : "post",
 	        dataType : "html",
 	        success : function(result) {
-	        	alert("--- BTC ---\n\n"+result);
-	        	console.log(result);
 	           var jsonData = JSON.parse(result);
 	           var data = new Array();
 	           var close = "";
 	           var volume = "";
 	           for (var i = 0; i < jsonData.length; i++){
-	              data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume)+"/"+"2";
+	              data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume*currency)+"/"+"2";
 	           }
 	           $("#btcData").val(data);
 	        }
@@ -98,13 +96,12 @@
     	        method : "post",
     	        dataType : "html",
     	        success : function(result) {
-    	         	alert("--- ETH ---\n\n"+result);
     	           var jsonData = JSON.parse(result);
     	           var data = new Array();
     	           var close = "";
     	           var volume = "";
     	           for (var i = 0; i < jsonData.length; i++){
-    	              data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume)+"/"+"2";
+    	              data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume*currency)+"/"+"2";
     	           }
     	           $("#ethData").val(data);
     	        }
@@ -119,13 +116,12 @@
                   method : "post",
                   dataType : "html",
                   success : function(result) {
-                	  alert("--- LTC ---\n\n"+result);
                 	 var jsonData = JSON.parse(result);
                      var data = new Array();
                      var close = "";
                      var volume = "";
                      for (var i = 0; i < jsonData.length; i++){
-                        data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume)+"/"+"2";
+                        data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume*currency)+"/"+"2";
                      }
                      $("#ltcData").val(data);
                   }
@@ -140,13 +136,12 @@
                   method : "post",
                   dataType : "html",
                   success : function(result) {
-                	  alert("--- ETC ---\n\n"+result);
                 	 var jsonData = JSON.parse(result);
                      var data = new Array();
                      var close = "";
                      var volume = "";
                      for (var i = 0; i < jsonData.length; i++){
-                        data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume)+"/"+"2";
+                        data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume*currency)+"/"+"2";
                      }
                      $("#etcData").val(data);
                   }
@@ -161,13 +156,12 @@
                   method : "post",
                   dataType : "html",
                   success : function(result) {
-                	  alert("--- XRP ---\n\n"+result);
                 	 var jsonData = JSON.parse(result);
                      var data = new Array();
                      var close = "";
                      var volume = "";
                      for (var i = 0; i < jsonData.length; i++){
-                        data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume)+"/"+"2";
+                        data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume*currency)+"/"+"2";
                      }
                      $("#xrpData").val(data);
                   }
@@ -181,13 +175,12 @@
                   method : "post",
                   dataType : "html",
                   success : function(result) {
-                	  alert("--- DASH ---\n\n"+result);
                 	 var jsonData = JSON.parse(result);
                      var data = new Array();
                      var close = "";
                      var volume = "";
                      for (var i = 0; i < jsonData.length; i++){
-                        data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume)+"/"+"2";
+                        data[i] =timeConverter(jsonData[i].date)+"/"+(jsonData[i].close*currency)+"/"+(jsonData[i].volume*currency)+"/"+"2";
                      }
                      $("#dashData").val(data);
                   }
